# Django_homework

./: .gitignore  catalog.json   pyproject.toml
blog/: urls.py
blog/migrations/: 0001_initial.py  0002_alter_blog_slug.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/managment/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_contact.py  0003_alter_product_changed_date_and_more.py  0004_version.py
catalog/services/: cashe.py
catalog/templates/catalog/: category_list.html  product_detail.html  product_form_with_formset.html  product_list.html
catalog/templates/catalog/includes/: inc_catalog_address.html  inc_catalog_menu.html
config/: settings.py  urls.py
users/: forms.py  models.py  services.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  password_reset_done.html  password_reset_form.html
