[tool.poetry]
name = "django-homework"
version = "0.1.0"
description = ""
authors = ["Михаил <misga.yats@gmail.com>"]
readme = "README.md"
packages = [{include = "django_homework"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

