[tool.poetry]
name = "django-homework"
version = "0.1.0"
description = ""
authors = ["Михаил <misga.yats@gmail.com>"]
readme = "README.md"
packages = [{include = "django_homework"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.1"
psycopg2-binary = "^2.9.6"
pillow = "^9.5.0"
ipython = "^8.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

